--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>FOOD</title>
+    <title>问</title>
     <link rel="stylesheet" href="wen.css">
     <!-- CSS only -->
     <link rel="apple-touch-icon" sizes="205x154" href="favicon.png">
